# Solitaire

./: CMakeLists.txt  Main.c
